add code for the display

--- a/public/log.html
+++ b/public/log.html
@@ -7,6 +7,6 @@
   <script type="text/javascript" src="/assets/js/log.js"></script>
 </head>
 <body>
-  <div id="output"></div>
+  <div id="list"></div>
 </body>
 </html>
